src/main/mp/parser/.antlr/MPParser.py
# Generated from /home/phthphat/Documents/PPL/assignment4/Assignment4/upload/src/main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "';'", "','", 
                     "'['", "']'", "':'", "'..'", "':='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\"'" ]

    symbolicNames = [ "<INVALID>", "LB", "RB", "LP", "RP", "SEMI", "COMMA", 
                      "LS", "RS", "COLON", "DOUBLEDOT", "ASSIGN", "WS", 
                      "TRADITIONALBLOCKCOMMENT", "BLOCKCOMMENT", "LINECOMMENT", 
                      "ADD", "SUB", "MUL", "DIVISION", "DIV", "MOD", "NOT", 
                      "OR", "AND", "EQUAL", "NOTEQUAL", "LESS", "LESSEQUAL", 
                      "GREATER", "GREATEREQUAL", "INTLIT", "FLOATLIT", "PROGRAM", 
                      "INTTYPE", "REALTYPE", "BOOLTYPE", "BOOLEAN", "STRINGTYPE", 
                      "VOIDTYPE", "VAR", "ARRAY", "OF", "FUNCTION", "PROCEDURE", 
                      "TRUE", "FALSE", "IF", "THEN", "ELSE", "WHILE", "DO", 
                      "FOR", "TO", "DOWNTO", "BREAK", "CONTINUE", "RETURN", 
                      "WITH", "BEGIN", "END", "ID", "STRINGLIT", "DQ", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declar = 1
    RULE_mptype = 2
    RULE_comment = 3
    RULE_andThen = 4
    RULE_orElse = 5
    RULE_body = 6
    RULE_boollit = 7
    RULE_keyword = 8
    RULE_exp = 9
    RULE_exp1 = 10
    RULE_exp2 = 11
    RULE_exp3 = 12
    RULE_exp4 = 13
    RULE_exp5 = 14
    RULE_indexExpression = 15
    RULE_varDeclar = 16
    RULE_listVarDeclar = 17
    RULE_singleVarDeclar = 18
    RULE_listVar = 19
    RULE_varType = 20
    RULE_singleVarType = 21
    RULE_arrayVarType = 22
    RULE_lower = 23
    RULE_upper = 24
    RULE_funcType = 25
    RULE_singleFuncType = 26
    RULE_funcDeclar = 27
    RULE_listPara = 28
    RULE_paraDeclar = 29
    RULE_procDeclar = 30
    RULE_literal = 31
    RULE_assignStatement = 32
    RULE_listVarToAssign = 33
    RULE_ifStatement = 34
    RULE_bodyStmt = 35
    RULE_bodyStmt2 = 36
    RULE_whileStatement = 37
    RULE_forStatement = 38
    RULE_expr2 = 39
    RULE_breakStatement = 40
    RULE_continueStatement = 41
    RULE_returnStatement = 42
    RULE_withStatement = 43
    RULE_compoundStatement = 44
    RULE_funcallExp = 45
    RULE_listExp = 46
    RULE_callStatement = 47
    RULE_statement = 48
    RULE_varElement = 49

    ruleNames =  [ "program", "declar", "mptype", "comment", "andThen", 
                   "orElse", "body", "boollit", "keyword", "exp", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "indexExpression", "varDeclar", 
                   "listVarDeclar", "singleVarDeclar", "listVar", "varType", 
                   "singleVarType", "arrayVarType", "lower", "upper", "funcType", 
                   "singleFuncType", "funcDeclar", "listPara", "paraDeclar", 
                   "procDeclar", "literal", "assignStatement", "listVarToAssign", 
                   "ifStatement", "bodyStmt", "bodyStmt2", "whileStatement", 
                   "forStatement", "expr2", "breakStatement", "continueStatement", 
                   "returnStatement", "withStatement", "compoundStatement", 
                   "funcallExp", "listExp", "callStatement", "statement", 
                   "varElement" ]

    EOF = Token.EOF
    LB=1
    RB=2
    LP=3
    RP=4
    SEMI=5
    COMMA=6
    LS=7
    RS=8
    COLON=9
    DOUBLEDOT=10
    ASSIGN=11
    WS=12
    TRADITIONALBLOCKCOMMENT=13
    BLOCKCOMMENT=14
    LINECOMMENT=15
    ADD=16
    SUB=17
    MUL=18
    DIVISION=19
    DIV=20
    MOD=21
    NOT=22
    OR=23
    AND=24
    EQUAL=25
    NOTEQUAL=26
    LESS=27
    LESSEQUAL=28
    GREATER=29
    GREATEREQUAL=30
    INTLIT=31
    FLOATLIT=32
    PROGRAM=33
    INTTYPE=34
    REALTYPE=35
    BOOLTYPE=36
    BOOLEAN=37
    STRINGTYPE=38
    VOIDTYPE=39
    VAR=40
    ARRAY=41
    OF=42
    FUNCTION=43
    PROCEDURE=44
    TRUE=45
    FALSE=46
    IF=47
    THEN=48
    ELSE=49
    WHILE=50
    DO=51
    FOR=52
    TO=53
    DOWNTO=54
    BREAK=55
    CONTINUE=56
    RETURN=57
    WITH=58
    BEGIN=59
    END=60
    ID=61
    STRINGLIT=62
    DQ=63
    ERROR_CHAR=64
    UNCLOSE_STRING=65
    ILLEGAL_ESCAPE=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def declar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclarContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclarContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 100
                self.declar()
                self.state = 103 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.VAR) | (1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE))) != 0)):
                    break

            self.state = 105
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclar(self):
            return self.getTypedRuleContext(MPParser.VarDeclarContext,0)


        def funcDeclar(self):
            return self.getTypedRuleContext(MPParser.FuncDeclarContext,0)


        def procDeclar(self):
            return self.getTypedRuleContext(MPParser.ProcDeclarContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declar




    def declar(self):

        localctx = MPParser.DeclarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declar)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.varDeclar()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.funcDeclar()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.procDeclar()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MptypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTTYPE(self):
            return self.getToken(MPParser.INTTYPE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_mptype




    def mptype(self):

        localctx = MPParser.MptypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mptype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(MPParser.INTTYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRADITIONALBLOCKCOMMENT(self):
            return self.getToken(MPParser.TRADITIONALBLOCKCOMMENT, 0)

        def BLOCKCOMMENT(self):
            return self.getToken(MPParser.BLOCKCOMMENT, 0)

        def LINECOMMENT(self):
            return self.getToken(MPParser.LINECOMMENT, 0)

        def getRuleIndex(self):
            return MPParser.RULE_comment




    def comment(self):

        localctx = MPParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.TRADITIONALBLOCKCOMMENT) | (1 << MPParser.BLOCKCOMMENT) | (1 << MPParser.LINECOMMENT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AndThenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def getRuleIndex(self):
            return MPParser.RULE_andThen




    def andThen(self):

        localctx = MPParser.AndThenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_andThen)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(MPParser.AND)
            self.state = 117
            self.match(MPParser.THEN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OrElseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_orElse




    def orElse(self):

        localctx = MPParser.OrElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_orElse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MPParser.OR)
            self.state = 120
            self.match(MPParser.ELSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compoundStatement(self):
            return self.getTypedRuleContext(MPParser.CompoundStatementContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_body




    def body(self):

        localctx = MPParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BoollitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(MPParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MPParser.FALSE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_boollit




    def boollit(self):

        localctx = MPParser.BoollitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_boollit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not(_la==MPParser.TRUE or _la==MPParser.FALSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class KeywordContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(MPParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(MPParser.CONTINUE, 0)

        def FOR(self):
            return self.getToken(MPParser.FOR, 0)

        def TO(self):
            return self.getToken(MPParser.TO, 0)

        def DOWNTO(self):
            return self.getToken(MPParser.DOWNTO, 0)

        def DO(self):
            return self.getToken(MPParser.DO, 0)

        def IF(self):
            return self.getToken(MPParser.IF, 0)

        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def RETURN(self):
            return self.getToken(MPParser.RETURN, 0)

        def WHILE(self):
            return self.getToken(MPParser.WHILE, 0)

        def BEGIN(self):
            return self.getToken(MPParser.BEGIN, 0)

        def END(self):
            return self.getToken(MPParser.END, 0)

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def TRUE(self):
            return self.getToken(MPParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MPParser.FALSE, 0)

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def REALTYPE(self):
            return self.getToken(MPParser.REALTYPE, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTTYPE(self):
            return self.getToken(MPParser.INTTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MPParser.STRINGTYPE, 0)

        def NOT(self):
            return self.getToken(MPParser.NOT, 0)

        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def DIV(self):
            return self.getToken(MPParser.DIV, 0)

        def MOD(self):
            return self.getToken(MPParser.MOD, 0)

        def getRuleIndex(self):
            return MPParser.RULE_keyword




    def keyword(self):

        localctx = MPParser.KeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_keyword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.DIV) | (1 << MPParser.MOD) | (1 << MPParser.NOT) | (1 << MPParser.OR) | (1 << MPParser.AND) | (1 << MPParser.INTTYPE) | (1 << MPParser.REALTYPE) | (1 << MPParser.BOOLEAN) | (1 << MPParser.STRINGTYPE) | (1 << MPParser.VAR) | (1 << MPParser.ARRAY) | (1 << MPParser.OF) | (1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.TRUE) | (1 << MPParser.FALSE) | (1 << MPParser.IF) | (1 << MPParser.THEN) | (1 << MPParser.ELSE) | (1 << MPParser.WHILE) | (1 << MPParser.DO) | (1 << MPParser.FOR) | (1 << MPParser.TO) | (1 << MPParser.DOWNTO) | (1 << MPParser.BREAK) | (1 << MPParser.CONTINUE) | (1 << MPParser.RETURN) | (1 << MPParser.BEGIN) | (1 << MPParser.END))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self):
            return self.getTypedRuleContext(MPParser.Exp1Context,0)


        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def andThen(self):
            return self.getTypedRuleContext(MPParser.AndThenContext,0)


        def orElse(self):
            return self.getTypedRuleContext(MPParser.OrElseContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_exp



    def exp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.ExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_exp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.exp1()
            self._ctx.stop = self._input.LT(-1)
            self.state = 140
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.ExpContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                    self.state = 131
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 134
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [MPParser.AND]:
                        self.state = 132
                        self.andThen()
                        pass
                    elif token in [MPParser.OR]:
                        self.state = 133
                        self.orElse()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 136
                    self.exp1() 
                self.state = 142
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Exp2Context)
            else:
                return self.getTypedRuleContext(MPParser.Exp2Context,i)


        def EQUAL(self):
            return self.getToken(MPParser.EQUAL, 0)

        def NOTEQUAL(self):
            return self.getToken(MPParser.NOTEQUAL, 0)

        def LESS(self):
            return self.getToken(MPParser.LESS, 0)

        def LESSEQUAL(self):
            return self.getToken(MPParser.LESSEQUAL, 0)

        def GREATER(self):
            return self.getToken(MPParser.GREATER, 0)

        def GREATEREQUAL(self):
            return self.getToken(MPParser.GREATEREQUAL, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp1




    def exp1(self):

        localctx = MPParser.Exp1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_exp1)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.exp2(0)
                self.state = 144
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.EQUAL) | (1 << MPParser.NOTEQUAL) | (1 << MPParser.LESS) | (1 << MPParser.LESSEQUAL) | (1 << MPParser.GREATER) | (1 << MPParser.GREATEREQUAL))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 145
                self.exp2(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.exp2(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp3(self):
            return self.getTypedRuleContext(MPParser.Exp3Context,0)


        def exp2(self):
            return self.getTypedRuleContext(MPParser.Exp2Context,0)


        def ADD(self):
            return self.getToken(MPParser.ADD, 0)

        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp2


